# aps-automation-sdk

./: .gitignore  CONTRIBUTING.md  README.md  example.ipynb  pyproject.toml
aps_automation_sdk/: __init__.py  acc.py  classes.py  core.py  utils.py
examples/01_delete_walls/: example_delete_walls.ipynb
examples/02_ifc_export/: example_export_ifc.ipynb
examples/03_structural_elements/: example_create_structural_elements.ipynb
examples/04_AutoCAD_list_layers/: example_list_layers.ipynb
examples/Addins/: example_create_revit_addin.md
examples/AutoCAD_01_list_layers/: example_list_layers.ipynb
examples/Revit_01_delete_walls/: example_delete_walls.ipynb
examples/Revit_02_export_to_ifc/: example_export_ifc.ipynb
examples/Revit_02_export_to_ifc/files/: export_settings.json
examples/Revit_03_create_structural_elements/: example_create_structural_elements.ipynb
examples/Revit_03_create_structural_elements/files/: structure.json
examples/Revit_04_change_global_params/: example_change_global_parameters.ipynb
