[project]
name = "aps-automation-sdk"
authors = [{ name = "Alejandro Duarte", email = "alejandroduartevendries@gmail.com" }, { name = "Stijn Jansen", email = "sjansen@viktor.ai" }, ]
license = { text = "MIT" }
version = "0.1.0"
description = "Python SDK for Autodesk Platform Services Automation API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
examples = [
    "ipykernel>=7.1.0",
]

[tool.setuptools]
packages = ["aps_automation_sdk"]

[tool.uv]
package = true

[project.urls]
repository = "https://github.com/viktor-platform/aps-automation-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
